# literature-research-automation-tool

./: .gitignore  README.md  database_embedder.py  database_inspector.py  main.py  pyproject.toml
