[project]
name = "literature-research-automation-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "transformers>=4.30.0",
    "torch>=2.2.0",
    "tqdm>=4.64.0",
    "pyarrow>=24.0.0",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
